<resources>
    <string name="app_name">虚拟SMS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="top">短信不会发送出去，只是进行模拟。</string>
    <string name="telephone">请输入对方手机号</string>
    <string name="send">模拟第三方发送给当前手机</string>
    <string name="receive">模拟当前手机发送给第三方</string>
    <string name="content">请输入短信内容</string>
    <string name="send_button">发送短信</string>
    <string name="receive_button">接受短信</string>
    <string name="more_button">关于</string>

</resources>
